force-app/main/default/objects/Target_Incentive_Junction__c/Target_Incentive_Junction__c.object-meta.xml
<CustomObject>
    <label>Target Incentive Junction</label>
    <nameField>
        <label>Target Incentive Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Incentive Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>