force-app/main/default/objects/Target_Incentive_Junction__c/fields/Availed_Date__c.field-meta.xml
<CustomField>
    <fullName>Availed_Date__c</fullName>
    <label>Availed Date</label>
    <type>Date</type>
</CustomField>