force-app/main/default/objects/Target_Incentive_Junction__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <label>Incentive</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Incentive picked should be of same type.</errorMessage>
        <filterItems>
            <field>Incentive__c.Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Incentive__c</referenceTo>
    <relationshipLabel>Target Incentive Junction</relationshipLabel>
    <relationshipName>Target_Incentive_Junction</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>