force-app/main/default/objects/Target_Incentive_Junction__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Target should be picked by type</errorMessage>
        <filterItems>
            <field>Target__c.Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Target__c</referenceTo>
    <relationshipLabel>Target Incentive Junction</relationshipLabel>
    <relationshipName>Target_Incentive_Junction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>