force-app/main/default/objects/Target_Incentive_Junction__c/fields/TargetType__c.field-meta.xml
<CustomField>
    <fullName>TargetType__c</fullName>
    <formula>TEXT( Target__r.Type__c)</formula>
    <label>TargetType</label>
    <type>Text</type>
</CustomField>