force-app/main/default/objects/Target_Incentive_Junction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target__c</columns>
    <columns>Incentive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>